# detective-catalog-service

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  run-docker.sh  setup.cfg  setup.py
.github/workflows/: ci.yml  tests.yml
docker/: Dockerfile  run.sh
src/detective_catalog_service/: settings.py  utils.py
src/detective_catalog_service/database/: execution.py  mutations.py  queries.py
src/detective_catalog_service/service/: consumer.py  producer.py  server.py
src/detective_catalog_service/service/listeners/: catalog_listener.py  insert.py  list.py  log_listener.py  registration.py  update.py
src/detective_catalog_service/service/models/: accumulo.py  bigquery.py  cassandra.py  main.py  postgresql.py  register.py  utils.py
src/detective_catalog_service/service/models/connector/: accumulo.py  bigquery.py  cassandra.py  hive.py  main.py  mongodb.py  postgresql.py
src/detective_catalog_service/service/models/payload/: payload_auth.py  routine.py
src/detective_catalog_service/service/models/response/: catalog_requests.py  response_auth.py
src/detective_catalog_service/service/utils/: auth.py
src/detective_catalog_service/service/views/: accumulo.py  bigquery.py  cassandra.py  catalog.py  connector.py  postgresql.py
src/detective_catalog_service/service/views/responses/: codes.py
src/detective_catalog_service/service/views/routine/: crawl.py  delete.py  register.py  update.py
src/detective_catalog_service/trino/: api.py
(+5 files in other folders)
