[metadata]
name = catalog-service
version = 1.0.0\-beta
description = Repository for a microservice that manages trino catalogs within the detective platform
author = detective.solutions GmbH
platforms = unix, linux, osx, cygewin win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    pydgraph==21.3.2
    kafka-python==2.0.2
    python-dotenv==0.20.0
    pydantic==1.9.1
    pandas==1.4.2
    fastapi[all]==0.78.0
    requests==2.27.1
    protobuf==3.20.*
    uvicorn>=0.15.0
    aiokafka==0.7.2
python_requires = >=3.8
package_dir =
    = src
zip_safe = no

[options.packages.find]
where=src

[options.extras_require]
testing =
    flake8==3.9.2
    tox==3.24.3
    pytest==6.2.5
    pytest-cov==2.12.1
    mypy==0.910
    types-requests==2.27.7

[options.package_data]
detective_query_service = py.typed

[flake8]
max-line-length = 160
